# stock_api

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  bitbucket-pipelines.yml  pyproject.toml
src/: example_notebook.ipynb  helper_functions.py  main_app_template.py  main_async_run.py  pydantic_functions.py  technical_trade_analysis.py
test/: test.py  test_helper_functions.py
tests/: test.py  test_template.py
